lion.css
/*
* Lion V1.0.0
* Copyright 2015, Julian Salas
* www.lionui.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 04/27/2015
*/

/* Table of contents
- Reset
- Grid
- Typography
- Navigation
- Buttons
- Forms
- Tables
- Alerts
- Lists
- Utilities
- Extras
*/

/* –––––––––––––––––––––––––– Reset –––––––––––––––––––––––––– */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
img{
	max-width: 100%;
}
/* –––––––––––––––––––––––––– Grid –––––––––––––––––––––––––– */
.container {
  width: 100%;
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
  position: relative;
}
@media (min-width: 400px) {
  .container {
    width: 85%;
    padding: 0; }
}
@media (min-width: 550px) {
  .container {
    width: 80%; }
}
.container:after, .row:after, .u-cf {
  content: "";
  display: table;
  clear: both;
}
.one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve, .one-third, .two-thirds, .one-half {
  width: 100%;
  float: left;
  box-sizing: border-box;
}
@media (min-width: 550px) {
  .one, .two, .three, .four, .five, .six, .seven, .eight, .nine, .ten, .eleven, .twelve, .one-third, .two-thirds, .one-half {
    margin-left: 4%; }
  .one:first-child, .two:first-child, .three:first-child, .four:first-child, .five:first-child, .six:first-child, .seven:first-child, .eight:first-child, .nine:first-child, .ten:first-child, .eleven:first-child, .twelve:first-child, .one-third:first-child, .two-thirds:first-child, .one-half:first-child {
    margin-left: 0; }
  .one                    { width: 4.66666666667%; }
  .two                    { width: 13.3333333333%; }
  .three                  { width: 22%;            }
  .one-thirds,
  .four                   { width: 30.6666666667%; }
  .five                   { width: 39.3333333333%; }
  .one-half,
  .six                    { width: 48%;            }
  .seven                  { width: 56.6666666667%; }
  .two-thirds,
  .eight                  { width: 65.3333333333%; }
  .nine                   { width: 74.0%;          }
  .ten                    { width: 82.6666666667%; }
  .eleven                 { width: 91.3333333333%; }
  .twelve                 { width: 100%; margin-left: 0; }
}
.full-width {
  width: 100%;
  box-sizing: border-box;
}
/* –––––––––––––––––––––––––– Typography –––––––––––––––––––––––––– */

p{
	line-height: 1.5em;
	margin: 0 0 2em 0;
}
h1,h2,h3,h4,h5,h6 {
  line-height: 1em;
  letter-spacing: -.02em;
  
}
h1{
  font-size: 2em;
  margin-bottom: .5em;
}
h2{
	font-size: 1.5em;
	margin-bottom: .6em;
}
h3{
	font-size: 1.25em;
  line-height: 1.2em;
  margin-bottom: .7em;
}
h4{
	font-size: 1em;
  line-height: 1.5em;
  margin-bottom: .8em;
}
h5{
	font-size: 0.875em;
  line-height: 1.14286em;
  margin-bottom: .9em;
}
h6{
	font-size: 0.75em;
  line-height: 1.33333em;
  margin-bottom: 1em;
}

a{
	text-decoration: none;
	color: #2a94d6;
}

.title{
	margin-bottom: 1.5em;
}
/* –––––––––––––––––––––––––– nav.navigation –––––––––––––––––––––––––– */

header{
	background-size: cover;
	box-sizing: border-box;	
  overflow: visible;
  margin-bottom: 50px;
}
header.bg{
	background-color: #5589d5;
}
header.bg nav.nav li a{
	color: white;
}
nav.nav{
  margin: 1em 0;
}
nav.nav.bar{
	background: #2a94d6;
	border-radius: 4px;
  padding: 0 1em;
}

nav.nav li{
	margin-bottom: 0;
}
nav.nav li a{
	padding: 1em;
	display: inline-block;
}

nav.nav>ul>li:last-child a{
	padding-right: 0;
}
nav.nav:after{
	clear: both;
  content: "";
  display: table;
}
nav.nav a{
	font-weight: 600;
}
nav.nav.bar a{
	color: white;
}

nav.nav .logo{
	float: left;
  padding: 1em 0;
  
}
nav.nav a.logo:hover,
nav.nav .logo a:hover{
  opacity: .8;
}
.logo img{
	  max-height: 30px;
  max-width: 200px;
}
nav.nav>ul{
	float: right;
	padding-bottom: 0em;
	margin-bottom: 0;
}

nav.nav>ul>li{
	display: inline;
	position: relative;
}
.hamburger{
	position: relative;
  top: 0.25em;
  display: none;
}
nav.nav .hamburger .line {
background-color: #2a94d6;
display: block;
width: 1.125em;
height: .125em;
-webkit-border-radius: 1px;
-moz-border-radius: 1px;
border-radius: 1px;
margin-bottom: .2em;
overflow: hidden;
opacity: 1;
position: relative;
transition: all .2s;
}
nav.nav.bar .hamburger .line {
background-color: #fff;
}
nav.nav.white .hamburger .line {
background-color: #fff;
}
nav.expanded .hamburger .line:last-child{
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    transform: rotate(-45deg);
    top:-5px;
}
nav.expanded .hamburger .line:nth-child(2){
opacity: 0;
}
nav.expanded .hamburger .line:first-child{
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    transform: rotate(45deg);
    top:5px;
}
/* Responsive */
@media (max-width: 750px) {
  nav.nav{
    position: relative;
  }
  nav.nav a.expand{
    position: absolute;
    right: 0;
    top: 0;
  }
  nav.nav>ul{
    float: none;
    width: 100%;
    max-height: 0px;
    overflow: hidden;
    transition: max-height 250ms;

  }
  nav.nav>ul>li:first-child{
    padding-top: 30px;
  }
  nav.nav li a {
  padding: 1em 0;
  }
  nav.nav>ul li{
    display: block;
  }
  nav.nav.expanded>ul{
    max-height: 1000px;
    transition: max-height 250ms;
  }
  .expand{
    float: right;
    
  }
  nav.nav.bar .expand{
    padding: 1em;
  }
	.hamburger{
		display: block;
	}

  nav.nav>ul>li>ul {
  margin: 0 0 0 2em;
  font-size: inherit;
}
}
@media (min-width: 750px) {
  /* dropdown */
  nav.nav>ul>li>ul{
    margin: 1em 0 0 0;
    font-size: inherit;
    position: absolute;
    top: 1em;
    left: 1em;
    background: #000;
    display: none;
    visibility: hidden;
    opacity: 0;
    z-index: 100;
    border-radius: 4px;
  }
  nav.nav ul>li:hover>ul,
  nav.nav ul>li>ul:hover {
    display: block;
    opacity: 1;
    visibility: visible;
    -webkit-transiton: opacity 0.2s;
    -moz-transition: opacity 0.2s;
    -ms-transition: opacity 0.2s;
    -o-transition: opacity 0.2s;
    transition: opacity 0.2s;
  }

  nav.nav ul li ul:before{
    content: ' ';
    display: block;
    background: #000;
    width: 10px;
    height: 10px;
    position: absolute;
    top: -5px;
    left: 10px;
    -ms-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
  }
  nav.nav ul li ul li{
    display: block;
  }
  nav.nav ul li ul li a{
    color: white;
  }
  nav.nav>ul>li>ul>li>a:hover{
    color: #aaa;
  }
  nav.nav li ul li a{
    padding: 1em;
  }
}


/* –––––––––––––––––––––––––– Buttons –––––––––––––––––––––––––– */
@media (max-width: 550px) {
  .button{
    display: block;
    width: 100%;
    margin-bottom: 1em;
  }
}
.button{
  display: inline-block;
  height: 38px;
  padding: 0 30px;
  text-align: center;
  font-size: 12px;
  font-weight: 600;
  line-height: 38px;
  letter-spacing: .1rem;
  text-transform: uppercase;
  text-decoration: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 1px solid;
  cursor: pointer;
  box-sizing: border-box;
  color: #FFF;
  background-color: #33C3F0;
  border-color: #33C3F0;
}

.button:hover{
  color: #FFF;
  background-color: #1EAEDB;
  border-color: #1EAEDB;
}

.button.secondary{
  color: #FFF;
  background-color: #9F56E2;
  border-color: #8645F5;
}

.button.secondary:hover{
  color: #FFF;
  background-color: #7737A9;
  border-color: #791EDB;
}
.button.white{
  border-color: white;
  color: white;
}
.button.white.primary{
  background-color: #FFF;
  color: #33C3F0;
}
a.button{
  position: relative;
  top: -1px;
}

/* –––––––––––––––––––––––––– Forms –––––––––––––––––––––––––– */

label, legend {
  display: block;
  margin-bottom: .5rem;
  font-weight: 400;
}
input, textarea, select, fieldset {
  margin-bottom: 1.5rem;
}

input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select {
  height: 38px;
  padding: 6px 10px;
  background-color: #fff;
  border: 1px solid #D1D1D1;
  border-radius: 4px;
  box-shadow: none;
  box-sizing: border-box;
}
/* –––––––––––––––––––––––––– Tables –––––––––––––––––––––––––– */

table{
  max-width: 100%;
  box-sizing: border-box;
  margin-bottom: 2em;
  overflow-x: scroll;
  display: block;
}
th {
  font-weight: bold;
  border-bottom: 2px solid;
}
td {
  border-bottom: 1px solid;
}
th, td {
  padding: 15px 15px;
  text-align: left;
  border-color: #E1E1E1;
}
table.striped>tbody>tr:nth-of-type(odd) {
  background-color: #f9f9f9;
}
/* –––––––––––––––––––––––––– Alerts –––––––––––––––––––––––––– */

.alert{
  max-height: none;
  opacity: 1;
  padding: 1em;
  border-radius: 5px;
  background-color: #72c06e;
  color: white;
  margin: 1em 0;
}
.alert.success{
  background-color: #72c06e;
}
.alert.danger{
  background-color: #E24444;
}
.alert.warning{
	  background-color: #ECC321;
}
.alert.info{
	  background-color: #30BAEC;
}
.alert .close{
  position: absolute;
  right: 20px;
  background: 0 0;
  border: none;
  padding: 0;
  font-size: 16px;
  height: 16px;
  cursor: pointer;
}
.alert .close:before{
content: "x";
color: white;
}
.alert.closed{
}
/* –––––––––––––––––––––––––– Lists –––––––––––––––––––––––––– */

ul, ol{
	  margin-bottom: 2.5rem;
}

ul {
  list-style: disc inside;
}
ol {
  list-style: decimal inside;
}

li {
  margin-bottom: 1rem;
}
ul ul, ul ol, ol ol, ol ul {
  margin: 1.5rem 0 1.5rem 3rem;
  font-size: 90%;
}
/* –––––––––––––––––––––––––– Utilities –––––––––––––––––––––––––– */

.center{
	text-align: center;
}
.white,
.white a{
	color: white;
}
.block{
	display: block;
}
/* –––––––––––––––––––––––––– Extras –––––––––––––––––––––––––– */

pre, blockquote, dl, figure, table, p, ul, ol, form {
  margin-bottom: 2.5rem;
}
/* box sizing for easy grids and alignment */
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
/* code */
pre{
  background: #f7f7f7;
  border-radius: 3px;
}
code{
	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New, monospace;
    padding: 20px 30px 30px;
  display: block;
  color: #696969;
  font-size: 14px;
  overflow-x: scroll;
}

